# bound-extras

./: .travis.yml  CHANGELOG.md  bound-extras.cabal
.github/workflows/: haskell-ci.yml
example/: Example.hs
examples/: 0.output  1.output  2.output  Adjunctions.hs  BiSTLC.hs  BiSTLC2.hs  BiSTLC3.hs  BiSTLC4.hs  Examples.hs  Pretty.hs  SystemF.hs  id.output  stlc-2-app-delta.txt  stlc-2-arr-beta.txt  stlc-2-pair-beta.txt  stlc-2-redundant-case.txt  stlc-2-sum-beta.txt  stlc-3-pair-beta.txt  stlc-4-arr-beta.txt  stlc-4-eta-fun.txt  stlc-4-eta-triple.txt  stlc-4-pair-beta.txt  stlc-four-mult.txt  stlc-four-plus.txt  stlc-id.txt  stlc-not-tt.txt  suc.output  sysf-0.txt  sysf-1.txt  sysf-2.txt  sysf-id.txt  sysf-suc.txt
src/Bound/: ScopeH.hs  ScopeT.hs
src/Control/Monad/: Module.hs
