cabal-version: 2.2
name:          bound-extras
version:       0

synopsis: ScopeH and ScopeT extras for bound
category: Language, Compilers, Interpreters
description:
  Provides more complex @Scope@ variants; @ScopeT@ and @ScopeH@:
  .
  @
  Scope  b f a   ~ ScopeT b IdentityT f a ~ ScopeH b f f a
  ScopeT b t f a ~ ScopeH b (t f) f a
  @
  .
  Simple implementations of @ScopeH@ and @ScopeT@ would be similar
  (sans type arguments) to @Bound.Scope.Simple@.

license:      BSD-3-Clause
license-file: LICENSE
copyright:    (c) 2018 Oleg Grenrus

author:       Oleg Grenrus, Edward Kmett
maintainer:   Oleg Grenrus <oleg.grenrus@iki.fi>
homepage:     https://github.com/phadej/bound-extras
bug-reports:  https://github.com/phadej/bound-extras/issues

tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.3
   || ==8.6.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

  exposed-modules:
    Bound.ScopeH
    Bound.ScopeT
    Control.Monad.Module

  build-depends:
    -- GHC boot libraries
    , base           ^>=4.9.1.0 || ^>= 4.10.1.0 || ^>=4.11.1.0
    , deepseq        ^>=1.4.2.0
    , transformers   ^>=0.5.0.0

    -- other deps
    , bound          ^>=2.0.1
    , hashable       ^>=1.2.7.0

  if !impl(ghc >= 8.2)
    build-depends:
      bifunctors ^>=5.5.3

test-suite example
  type:             exitcode-stdio-1.0
  main-is:          Example.hs

  default-language: Haskell2010
  hs-source-dirs:   example
  ghc-options:      -Wall

  build-depends: base, bound, bound-extras
